--- a/styles.css
+++ b/styles.css
@@ -1,49 +1,27 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+body {
+  font-family: sans-serif;
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 20px;
+input[invalid] {
+  border: 2px solid red;
+}
+html {
+  overflow: auto;
 }
 
-#searchbar {
-  margin: 10px;
-  padding: 10px;
-  border-radius: 5px;
-  width: 50%;
-  box-sizing: border-box;
+html,
+body,
+div,
+iframe {
+  margin: 0px;
+  padding: 0px;
+  height: 100%;
+  border: none;
 }
-
-#list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.animals {
-  font-size: 1.2em;
-  padding: 10px;
-  border-bottom: 1px solid #ccc;
-  animation: fadeIn 0.5s ease-in-out;
-}
-
-.animals:last-child {
-  border-bottom: none;
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateY(-10px);
-  }
-
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
+iframe {
+  display: block;
+  width: 100%;
+  border: none;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
